--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (390.25-3) UNRELEASED; urgency=medium
+
+  * Add linux-4.15 patch from Archlinux.  (Closes: #892413)
+
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 12 Mar 2018 07:56:46 +0100
+
 nvidia-graphics-drivers (390.25-2) unstable; urgency=medium
 
   * Merge changes from 387.34-4.
