install the renamed GLVND libraries and add SONAME symlinks
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7917 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ nvidia-graphics-drivers (390.42-1) UNRELEASED; urgency=medium
       libGLESv2, and libEGL libraries, to prevent concurrently installed
       non-GLVND libraries from taking precedence in the dynamic linker
       cache.
+  * Install the renamed GLVND libraries and add SONAME symlinks.
   * Add linux-4.15 patch from Archlinux.  (Closes: #892413)
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 12 Mar 2018 16:44:24 +0100
