remove obsolete bits from README.source
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7920 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ nvidia-graphics-drivers (390.42-1) UNRELEASED; urgency=medium
   * Install the renamed GLVND libraries and add SONAME symlinks.
   * Update symbols files.
   * Add linux-4.15 patch from Archlinux.  (Closes: #892413)
+  * Remove obsolete bits from README.source.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 12 Mar 2018 16:44:24 +0100
 
