--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+nvidia-graphics-drivers (390.48-1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 390.48 (2018-03-28).
+    - Added support for the following GPUs: Quadro GV100, Tesla V100-SXM2-32GB,
+      Tesla V100-PCIE-32GB, Tesla V100-DGXS-32GB.
+    - Updated the driver to prevent G-SYNC from being enabled when a
+      Quadro Sync board is installed. G-SYNC and Quadro Sync were always
+      mutually incompatible features, and this change makes it easier to
+      use G-SYNC capable monitors on Quadro Sync configurations, as it is
+      now no longer necessary to manually disable G-SYNC.
+    - Further improved the fix for occasional flicker when using the X
+      driver's composition pipeline.  This was mostly fixed in 390.42,
+      but now the fix should be more complete.
+
+ -- Luca Boccassi <bluca@debian.org>  Thu, 29 Mar 2018 10:52:32 +0100
+
 nvidia-graphics-drivers (390.42-1) unstable; urgency=medium
 
   * New upstream long lived branch release 390.42 (2018-03-12).
