--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 nvidia-graphics-drivers (390.48-1) UNRELEASED; urgency=medium
 
   * New upstream long lived branch release 390.48 (2018-03-28).
+    * Fixed CVE-2018-6249, CVE-2018-625.
+      http://nvidia.custhelp.com/app/answers/detail/a_id/4649
+      (Closes: #894338)
     - Added support for the following GPUs: Quadro GV100, Tesla V100-SXM2-32GB,
       Tesla V100-PCIE-32GB, Tesla V100-DGXS-32GB.
     - Updated the driver to prevent G-SYNC from being enabled when a
