Update nv-readme.ids.amd64 for 390.48
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7942 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,9 @@ nvidia-graphics-drivers (390.48-1) UNRELEASED; urgency=medium
       driver's composition pipeline.  This was mostly fixed in 390.42,
       but now the fix should be more complete.
 
+  [ Luca Boccassi ]
+  * Update nv-readme.ids.
+
  -- Luca Boccassi <bluca@debian.org>  Thu, 29 Mar 2018 10:52:32 +0100
 
 nvidia-graphics-drivers (390.42-1) unstable; urgency=medium
