--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+nvidia-graphics-drivers (384.130-0svn1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 384.130 (2018-03-28).
+    - Improved compatibility with recent Linux kernels.
+    - Fixed a string concatenation bug that caused libGL to accidentally try to
+      create the directory "$HOME.nv" rather than "$HOME/.nv" in some cases
+      where /tmp isn't accessible.
+    - Increased the version numbers of the GLVND libGL, libGLESv1_CM,
+      libGLESv2, and libEGL libraries, to prevent concurrently installed
+      non-GLVND libraries from taking precedence in the dynamic linker
+      cache.
+
+ -- Luca Boccassi <bluca@debian.org>  Thu, 29 Mar 2018 11:24:33 +0100
+
 nvidia-graphics-drivers (384.111-4~deb9u1) stretch; urgency=medium
 
   * Rebuild for stretch.
