Close #894338 in changelog
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/384-stretch@7947 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 nvidia-graphics-drivers (384.130-0svn1) UNRELEASED; urgency=medium
 
   * New upstream long lived branch release 384.130 (2018-03-28).
+    * Fixed CVE-2018-6249, CVE-2018-625.
+      http://nvidia.custhelp.com/app/answers/detail/a_id/4649
+      (Closes: #894338)
     - Improved compatibility with recent Linux kernels.
     - Fixed a string concatenation bug that caused libGL to accidentally try to
       create the directory "$HOME.nv" rather than "$HOME/.nv" in some cases
