--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,10 @@ nvidia-graphics-drivers (384.130-0svn1) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * Install the renamed GLVND libraries and add SONAME symlinks.
 
+  [ Andreas Beckmann ]
+  * Bump the required glx-diversions/glx-alternative-nvidia version for the
+    renamed GLVND libraries.
+
  -- Luca Boccassi <bluca@debian.org>  Thu, 29 Mar 2018 11:24:33 +0100
 
 nvidia-graphics-drivers (384.111-4~deb9u1) stretch; urgency=medium
