--- a/debian/changelog
+++ b/debian/changelog
@@ -21,8 +21,9 @@ nvidia-graphics-drivers (390.48-1) unstable; urgency=medium
 
   [ Andreas Beckmann ]
   * Merge changes from 384.130-1 (UNRELEASED).
+  * Update lintian overrides.
 
- -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Apr 2018 16:17:45 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Apr 2018 17:51:02 +0200
 
 nvidia-graphics-drivers (390.42-1) unstable; urgency=medium
 
