--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (390.48-2~svn1) UNRELEASED; urgency=medium
+
+  * Fix loading nvidia kernel module on Linux 4.16 due to missing symbol.
+    (Closes: #895429)
+
+ -- Luca Boccassi <bluca@debian.org>  Thu, 12 Apr 2018 21:26:36 +0100
+
 nvidia-graphics-drivers (390.48-1) unstable; urgency=medium
 
   * New upstream long lived branch release 390.48 (2018-03-28).
