--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,8 @@ nvidia-graphics-drivers (396.18-0~svn1) UNRELEASED; urgency=medium
       defaults to disabled, but can be enabled to allow eGPUs and other
       surprise-removable GPUs to be configured with X screens.
 
+  * Update nv-readme.ids.
+
  -- Luca Boccassi <bluca@debian.org>  Thu, 12 Apr 2018 23:41:10 +0100
 
 nvidia-graphics-drivers (390.48-2~svn1) UNRELEASED; urgency=medium
