--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,7 @@ nvidia-graphics-drivers (396.18-0~svn1) UNRELEASED; urgency=medium
   * Update nv-readme.ids.
   * Update libnvidia-egl-wayland ABI version to 1.0.3.
   * Update symbols files.
+  * Add libnvidia-glvkspirv package for SPIR-V compiler support.
 
  -- Luca Boccassi <bluca@debian.org>  Thu, 12 Apr 2018 23:41:10 +0100
 
