Drop swiotlb.patch, merged upstream
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/396@7970 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,7 @@ nvidia-graphics-drivers (396.18-0~svn1) UNRELEASED; urgency=medium
   * Update libnvidia-egl-wayland ABI version to 1.0.3.
   * Update symbols files.
   * Add libnvidia-glvkspirv package for SPIR-V compiler support.
+  * Drop swiotlb.patch, merged upstream.
 
  -- Luca Boccassi <bluca@debian.org>  Thu, 12 Apr 2018 23:41:10 +0100
 
