--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 nvidia-graphics-drivers (390.48-2~svn1) UNRELEASED; urgency=medium
 
+  [ Luca Boccassi ]
   * Fix loading nvidia kernel module on Linux 4.16 due to missing symbol.
     (Closes: #895429)
+
+  [ Andreas Beckmann ]
+  * Bump Standards-Version to 4.1.4. No changes needed.
 
  -- Luca Boccassi <bluca@debian.org>  Thu, 12 Apr 2018 21:26:36 +0100
 
