--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (390.48-2~svn1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (390.48-2) unstable; urgency=medium
 
   [ Luca Boccassi ]
   * Fix loading nvidia kernel module on Linux 4.16 due to missing symbol.
@@ -7,7 +7,7 @@ nvidia-graphics-drivers (390.48-2~svn1) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Bump Standards-Version to 4.1.4. No changes needed.
 
- -- Luca Boccassi <bluca@debian.org>  Thu, 12 Apr 2018 21:26:36 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 16 Apr 2018 01:52:42 +0200
 
 nvidia-graphics-drivers (390.48-1) unstable; urgency=medium
 
