--- a/debian/changelog
+++ b/debian/changelog
@@ -30,7 +30,10 @@ nvidia-graphics-drivers (396.18-0~svn1) UNRELEASED; urgency=medium
     - Added a new global X configuration option "AllowExternalGpus", which
       defaults to disabled, but can be enabled to allow eGPUs and other
       surprise-removable GPUs to be configured with X screens.
+    * Drop support for i386:
+      https://nvidia.custhelp.com/app/answers/detail/a_id/4604/
 
+  [ Luca Boccassi ]
   * Update nv-readme.ids.
   * Update libnvidia-egl-wayland ABI version to 1.0.3.
   * Update symbols files.
