--- a/debian/changelog
+++ b/debian/changelog
@@ -20,8 +20,8 @@ nvidia-graphics-drivers (396.18-0~svn1) UNRELEASED; urgency=medium
     - Added a new global X configuration option "AllowExternalGpus", which
       defaults to disabled, but can be enabled to allow eGPUs and other
       surprise-removable GPUs to be configured with X screens.
-    * Drop support for i386 and armhf:
-      https://nvidia.custhelp.com/app/answers/detail/a_id/4604
+    * Drop kernel and Xorg driver support for i386, drop all support for
+      armhf: https://nvidia.custhelp.com/app/answers/detail/a_id/4604
   * New upstream release 390 series.
     - Added support for the following GPUs: Quadro P3200, Quadro P4200.
   * New upstream release 340 series.
@@ -37,6 +37,7 @@ nvidia-graphics-drivers (396.18-0~svn1) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * Switch to debhelper compat level 11.
+  * Build i386 library packages from the 32/ folder in the x86_64 .run file.
 
  -- Luca Boccassi <bluca@debian.org>  Thu, 12 Apr 2018 23:41:10 +0100
 
