--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (384.130-0svn1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (384.130-1) stretch; urgency=medium
 
   * New upstream long lived branch release 384.130 (2018-03-28).
     * Fixed CVE-2018-6249, CVE-2018-6253.
@@ -23,8 +23,9 @@ nvidia-graphics-drivers (384.130-0svn1) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Bump the required glx-diversions/glx-alternative-nvidia version for the
     renamed GLVND libraries.
+  * Upload to stretch
 
- -- Luca Boccassi <bluca@debian.org>  Thu, 29 Mar 2018 11:24:33 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 17 Apr 2018 14:40:27 +0200
 
 nvidia-graphics-drivers (384.111-4~deb9u1) stretch; urgency=medium
 
