document 396.xx preparations
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@8012 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (390.48-3) UNRELEASED; urgency=medium
+
+  * Prepare nvidia-detect for the upcoming nvidia-legacy-390xx packages.
+  * Prepare for the removal of i386/armhf support in 396.xx.
+  * Restrict watch file to releases from the 390.xx legacy branch.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 21 Apr 2018 16:38:57 +0200
+
 nvidia-graphics-drivers (390.48-2) unstable; urgency=medium
 
   [ Luca Boccassi ]
