--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,8 @@ nvidia-graphics-drivers (396.18-0~svn1) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Switch to debhelper compat level 11.
   * Build i386 library packages from the 32/ folder in the x86_64 .run file.
+  * Continue building nvidia-egl-common and nvidia-egl-wayland-common on i386
+    and armhf since they are used by legacy drivers.
   * Add NEWS entry and update nvidia-legacy-check to use
     nvidia-legacy-390xx-driver for Fermi cards.
 
