--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (390.48-3) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (390.48-3) unstable; urgency=medium
 
   * Prepare nvidia-detect for the upcoming nvidia-legacy-390xx packages.
   * Prepare for the removal of i386/armhf support in 396.xx.
@@ -6,7 +6,7 @@ nvidia-graphics-drivers (390.48-3) UNRELEASED; urgency=medium
     in legacy drivers.
   * Restrict watch file to releases from the 390.xx legacy branch.
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 21 Apr 2018 16:38:57 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 22 Apr 2018 04:34:11 +0200
 
 nvidia-graphics-drivers (390.48-2) unstable; urgency=medium
 
@@ -22,9 +22,8 @@ nvidia-graphics-drivers (390.48-2) unstable; urgency=medium
 nvidia-graphics-drivers (390.48-1) unstable; urgency=medium
 
   * New upstream long lived branch release 390.48 (2018-03-28).
-    * Fixed CVE-2018-6249, CVE-2018-6253.
+    * Fixed CVE-2018-6249, CVE-2018-6253.  (Closes: #894338)
       https://nvidia.custhelp.com/app/answers/detail/a_id/4649
-      (Closes: #894338)
     - Added support for the following GPUs: Quadro GV100, Tesla
       V100-SXM2-32GB, Tesla V100-PCIE-32GB, Tesla V100-DGXS-32GB.
     - Updated the driver to prevent G-SYNC from being enabled when a
