--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (390.48-4) UNRELEASED; urgency=medium
+
+  * Switch to debhelper compat level 11.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 22 Apr 2018 09:41:33 +0200
+
 nvidia-graphics-drivers (390.48-3) unstable; urgency=medium
 
   * Prepare nvidia-detect for the upcoming nvidia-legacy-390xx packages.
