--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 nvidia-graphics-drivers (390.48-4) UNRELEASED; urgency=medium
 
+  * Stop building lib*-glvnd-nvidia, now built from the 390xx legacy driver.
   * Switch to debhelper compat level 11.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 22 Apr 2018 09:41:33 +0200
