--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (396.18-0~svn1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (396.18-1) experimental; urgency=medium
 
   * New upstream beta 396.18 (2018-04-10).
     - Added support for a new Vulkan SPIR-V compiler which reduces shader
@@ -42,8 +42,9 @@ nvidia-graphics-drivers (396.18-0~svn1) UNRELEASED; urgency=medium
     and armhf since they are used by legacy drivers.
   * Add NEWS entry and update nvidia-legacy-check to use
     nvidia-legacy-390xx-driver for Fermi cards.
+  * Upload to experimental.
 
- -- Luca Boccassi <bluca@debian.org>  Thu, 12 Apr 2018 23:41:10 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 22 Apr 2018 13:59:45 +0200
 
 nvidia-graphics-drivers (390.48-4) UNRELEASED; urgency=medium
 
