--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,11 @@ nvidia-graphics-drivers (396.24-1~svn1) UNRELEASED; urgency=medium
     - Added support for 32-bit PCI domains throughout the NVIDIA driver stack.
       This support is required for running Linux VMs with recent versions of
       the pci_hyperv driver on top of Hyper-V.
+  * New upstream release 390 series.
+    - Added support for the following GPUs:
+      GeForce GTX 1050 with Max-Q Design, Tesla V100-FHHL-16GB.
+  * New upstream release 340 series.
+    - Added support for X.Org xserver ABI 24 (xorg-server 1.20).
 
   [ Luca Boccassi ]
   * Update nv-readme.ids.
@@ -100,8 +105,8 @@ nvidia-graphics-drivers (390.48-1) unstable; urgency=medium
   * New upstream long lived branch release 390.48 (2018-03-28).
     * Fixed CVE-2018-6249, CVE-2018-6253.  (Closes: #894338)
       https://nvidia.custhelp.com/app/answers/detail/a_id/4649
-    - Added support for the following GPUs: Quadro GV100, Tesla
-      V100-SXM2-32GB, Tesla V100-PCIE-32GB, Tesla V100-DGXS-32GB.
+    - Added support for the following GPUs: Quadro GV100,
+      Tesla V100-SXM2-32GB, Tesla V100-PCIE-32GB, Tesla V100-DGXS-32GB.
     - Updated the driver to prevent G-SYNC from being enabled when a
       Quadro Sync board is installed. G-SYNC and Quadro Sync were always
       mutually incompatible features, and this change makes it easier to
