--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-nvidia-graphics-drivers (390.48-4) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (390.59-1~svn1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 390.59 (2018-05-16).
+    - Added support for the following GPUs: GeForce GTX 1050 with Max-Q Design,
+      Tesla V100-FHHL-16GB, Quadro P3200, Quadro P4200.
 
   * Stop building lib*-glvnd-nvidia, now built from the 390xx legacy driver.
   * Switch to debhelper compat level 11.
