--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ nvidia-graphics-drivers (390.59-1~svn1) UNRELEASED; urgency=medium
 
   [ Luca Boccassi ]
   * Drop swiotlb.patch, fixed upstream.
+  * Update nv-readme.ids.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 22 Apr 2018 09:41:33 +0200
 
