--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ nvidia-graphics-drivers (390.59-1~svn1) UNRELEASED; urgency=medium
   * Update nv-readme.ids.
   * Update symbols files.
   * Add xorg-video-abi-24 as alternative dependency.
+  * Bump xserver-xorg-core dependency to << 2:1.20.99 for ABI 24.
+    (Closes: #900112)
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 22 Apr 2018 09:41:33 +0200
 
