finalise changelog for nvidia-graphics-drivers (390.59-1), upload to unstable
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@8068 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (390.59-1~svn1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (390.59-1) unstable; urgency=medium
 
   * New upstream long lived branch release 390.59 (2018-05-16).
     - Added support for the following GPUs: GeForce GTX 1050 with Max-Q Design,
@@ -16,7 +16,7 @@ nvidia-graphics-drivers (390.59-1~svn1) UNRELEASED; urgency=medium
   * Bump xserver-xorg-core dependency to << 2:1.20.99 for ABI 24.
     (Closes: #900112)
 
- -- Andreas Beckmann <anbe@debian.org>  Sun, 22 Apr 2018 09:41:33 +0200
+ -- Luca Boccassi <bluca@debian.org>  Sat, 26 May 2018 19:14:30 +0100
 
 nvidia-graphics-drivers (390.48-3) unstable; urgency=medium
 
