--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 nvidia-graphics-drivers (390.59-1) UNRELEASED; urgency=medium
 
   * New upstream long lived branch release 390.59 (2018-05-16).
-    - Added support for the following GPUs: GeForce GTX 1050 with Max-Q Design,
-      Tesla V100-FHHL-16GB, Quadro P3200, Quadro P4200.
+    - Added support for the following GPUs:
+      GeForce GTX 1050 with Max-Q Design, Tesla V100-FHHL-16GB, Quadro P3200,
+      Quadro P4200.
+  * New upstream release 340 series.
+    - Added support for X.Org xserver ABI 24 (xorg-server 1.20).
+    - Improved nvidia-bug-report.sh to check for kern.log which is the default
+      kernel log-file location for many Debian-based Linux distributions.
 
   [ Luca Boccassi ]
   * Drop swiotlb.patch, fixed upstream.
@@ -40,8 +45,8 @@ nvidia-graphics-drivers (390.48-1) unstable; urgency=medium
   * New upstream long lived branch release 390.48 (2018-03-28).
     * Fixed CVE-2018-6249, CVE-2018-6253.  (Closes: #894338)
       https://nvidia.custhelp.com/app/answers/detail/a_id/4649
-    - Added support for the following GPUs: Quadro GV100, Tesla
-      V100-SXM2-32GB, Tesla V100-PCIE-32GB, Tesla V100-DGXS-32GB.
+    - Added support for the following GPUs: Quadro GV100,
+      Tesla V100-SXM2-32GB, Tesla V100-PCIE-32GB, Tesla V100-DGXS-32GB.
     - Updated the driver to prevent G-SYNC from being enabled when a
       Quadro Sync board is installed. G-SYNC and Quadro Sync were always
       mutually incompatible features, and this change makes it easier to
