--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ nvidia-graphics-drivers (390.67-1) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * Convert packaging repository from SVN to GIT.
+  * Update nv-readme.ids.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 21 Jun 2018 20:41:28 +0200
 
