--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,9 @@ nvidia-graphics-drivers (396.24-1~git1) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * Update nv-readme.ids.
 
+  [ Andreas Beckmann ]
+  * libcuda1: Add Provides: libcuda-9.2-1{,-i386}.
+
  -- Luca Boccassi <bluca@debian.org>  Wed, 02 May 2018 20:10:29 +0100
 
 nvidia-graphics-drivers (396.18-1) experimental; urgency=medium
