--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (390.67-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (390.67-1) unstable; urgency=medium
 
   * New upstream long lived branch release 390.67 (2018-06-05).
     - Fixed a bug that could cause kernel panics when using Quadro SDI
@@ -21,7 +21,7 @@ nvidia-graphics-drivers (390.67-1) UNRELEASED; urgency=medium
     since xserver 1.20 no longer does that.
     (Closes: #900248, #900264, #900378, #900766)
 
- -- Andreas Beckmann <anbe@debian.org>  Thu, 21 Jun 2018 20:41:28 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 28 Jun 2018 12:32:19 +0200
 
 nvidia-graphics-drivers (390.59-1) unstable; urgency=medium
 
