--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (390.67-2) UNRELEASED; urgency=high
+nvidia-graphics-drivers (390.67-2) unstable; urgency=high
 
   * Add kmem_cache_create_usercopy.patch from Red Hat, fixing "Bad or missing
     usercopy whitelist? Kernel memory exposure attempt detected from SLUB
@@ -6,7 +6,7 @@ nvidia-graphics-drivers (390.67-2) UNRELEASED; urgency=high
     CONFIG_HARDENED_USERCOPY_FALLBACK (i.e. linux-image-4.16.0-2-* or newer).
     (Closes: #901919)
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 03 Jul 2018 21:18:17 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Jul 2018 02:01:31 +0200
 
 nvidia-graphics-drivers (390.67-1) unstable; urgency=medium
 
