--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (390.67-3) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (390.67-3) unstable; urgency=medium
 
   [ Luca Boccassi ]
   * Add drm_control_allow.patch to fix kernel module build for Linux 4.18 and
@@ -8,7 +8,7 @@ nvidia-graphics-drivers (390.67-3) UNRELEASED; urgency=medium
   * The libGLX_indirect.so.0 alternative is now handled by glx-alternatives.
   * Bump Standards-Version to 4.1.5. No changes needed.
 
- -- Andreas Beckmann <anbe@debian.org>  Sun, 08 Jul 2018 10:44:07 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 16 Jul 2018 23:57:17 +0200
 
 nvidia-graphics-drivers (390.67-2) unstable; urgency=high
 
@@ -30,6 +30,7 @@ nvidia-graphics-drivers (390.67-1) unstable; urgency=medium
     - Fixed a bug that caused the driver, in some low bandwidth DisplayPort
       configurations, to not implicitly enable display dithering.  This
       resulted in visible banding.
+    * (Closes: #884917)
 
   [ Andreas Beckmann ]
   * Convert packaging repository from SVN to GIT.
@@ -61,7 +62,7 @@ nvidia-graphics-drivers (390.59-1) unstable; urgency=medium
   * Update symbols files.
   * Add xorg-video-abi-24 as alternative dependency.
   * Bump xserver-xorg-core dependency to << 2:1.20.99 for ABI 24.
-    (Closes: #900112)
+    (Closes: #900112, #902375)
 
  -- Luca Boccassi <bluca@debian.org>  Sat, 26 May 2018 19:14:30 +0100
 
@@ -145,6 +146,7 @@ nvidia-graphics-drivers (390.25-1) experimental; urgency=medium
     - Fixed a regression introduced in 390.12 that caused occasional hangs and
       hard lockup messages in the system log when screen transformations are in
       use.
+    * (Closes: #872988)
 
   [ Luca Boccassi ]
   * Update nv-readme.ids.
